--- a/mi trabajo/mi proyecto.html
+++ b/mi trabajo/mi proyecto.html
@@ -120,7 +120,7 @@
         </ul>
         </li>
         
-        <li><a href="#">personajes secundarios/de apoyo</a></li>
+        <li><a href="#">personajes secundarios/de apoyo</a>
         <ul class="menu-horizontal2">
 
             <li><a href="#">volumen 1</a>
@@ -207,6 +207,7 @@
                  <ul class="menu-vertical2"></ul>
             </li>
         </ul>
+    </li>
     </li>
     </ul>
         <li><a href="#">lore</a>
